[package]
name = "blitzortung"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "blitzortung"
path = "src/bin/main.rs"
required-features = ["bin"]

[[bench]]
name = "ws_msg_decode"
harness = false
required-features = ["live"]

[dependencies]
futures = "0.3.21"
rand = { version = "0.8.5", optional = true }
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
serde_repr = "0.1.8"
thiserror = "1.0.31"
time = { version = "0.3.9", optional = true, features = ["serde-well-known"] }
tokio = { version = "1.18.2", features = ["net"] }
tokio-tungstenite = { version = "0.17.1", features = ["native-tls"], optional = true }

[features]
default = ["bin", "live"]
live = ["dep:tokio-tungstenite", "tokio/time", "dep:rand", "time"]
bin = ["tokio/rt", "tokio/macros", "tokio/rt-multi-thread", "live"]

[dev-dependencies]
criterion = "0.3.5"
