[package]
name = "blitzortung"
version = "0.1.4"
edition = "2021"
description = "Unofficial Blitzortung.org client"
license = "MIT"
repository = "https://github.com/akeamc/blitzortung"

[dependencies]
futures = "0.3.26"
geo = { version = "0.24.0", optional = true }
rand = { version = "0.8.5", optional = true }
serde = { version = "1.0.154", features = ["derive"] }
serde_json = "1.0.94"
thiserror = "1.0.39"
time = { version = "0.3.20", optional = true, features = ["serde-human-readable"] }
tokio = { version = "1.26.0", features = ["net"] }
tokio-tungstenite = { version = "0.18.0", features = ["rustls-tls-native-roots"], optional = true }
tracing = { version = "0.1.37", optional = true }

[features]
live = ["dep:tokio-tungstenite", "dep:rand", "dep:time"]

[dev-dependencies]
tokio-test = "0.4.2"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
