[package]
name = "blitzortung"
version = "0.1.5"
edition = "2021"
description = "Unofficial Blitzortung.org client"
license = "MIT"
repository = "https://github.com/akeamc/blitzortung"

[dependencies]
futures = "0.3"
geo = { version = "0.24", optional = true }
rand = { version = "0.8", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
time = { version = "0.3", optional = true, features = ["serde-human-readable"] }
tokio = { version = "1.26", features = ["net"] }
tokio-tungstenite = { version = "0.18", features = ["rustls-tls-native-roots"], optional = true }
tracing = { version = "0.1", optional = true }

[features]
live = ["dep:tokio-tungstenite", "dep:rand", "dep:time"]

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }
tokio-test = "0.4"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
