[package]
name = "blitzortung"
version = "0.1.5"
edition = "2021"
description = "Unofficial Blitzortung.org client"
license = "MIT"
repository = "https://github.com/akeamc/blitzortung"

[dependencies]
futures = "0.3"
geo-types = { version = "0.7", optional = true }
once_cell = { version = "1.18", optional = true }
rand = { version = "0.8", optional = true }
regex = { version = "1.10", optional = true }
reqwest = { version = "0.12", optional = true, default-features = false, features = [
    "rustls-tls",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
time = { workspace = true, optional = true, features = [
    "serde-human-readable",
] }
tokio = { version = "1", features = ["net"] }
tokio-tungstenite = { version = "0.20", features = [
    "rustls-tls-native-roots",
], optional = true }
tracing = { version = "0.1", optional = true }

[features]
live = [
    "dep:once_cell",
    "dep:rand",
    "dep:regex",
    "dep:reqwest",
    "dep:time",
    "dep:tokio-tungstenite",
]

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }
tokio-test = "0.4"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
