[package]
name = "lightningalert"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.57"
blitzortung = { version = "0.1", default-features = false, features = [
	"live",
	"geo",
] }
dotenv = "0.15.0"
futures = "0.3.21"
geo = "0.20.1"
reverse_geocoder = "3.0.0"
structopt = "0.3.26"
tokio = { version = "1.18.2", features = ["rt", "rt-multi-thread", "macros"] }
tracing = "0.1.34"
tracing-subscriber = { version = "0.3.11", features = ["env-filter"] }

[features]
